# some_rust_aws_examples

./: Cargo.toml  README.md
basic/cloudfront/cloudfront_create_cloud_front_origin_access_identity/: Cargo.toml
basic/ec2/ec2_describe_snapshots/: Cargo.toml
basic/s3/s3_put_bucket_tagging/: Cargo.toml
cloudfront/cloudfront_list_distributions/: Cargo.toml
ec2/ec2_describe_images/: Cargo.toml
ec2/ec2_describe_instances_1/: Cargo.toml
ec2/ec2_describe_security_groups/: Cargo.toml
ec2/ec2_describe_security_groups_1/: Cargo.toml
ec2/ec2_describe_security_groups_2/: Cargo.toml
ec2/ec2_describe_volumes/: Cargo.toml
ec2/ec2_describe_vpcs/: Cargo.toml
ec2/ec2_describe_vpcs_1/: Cargo.toml
ec2/ec2_run_instances/: Cargo.toml
ec2/ec2_terminate_instances/: Cargo.toml
iam/iam_get_user_1/: Cargo.toml
iam/iam_list_policies_1/: Cargo.toml
iam/iam_list_policies_2/: Cargo.toml
iam/iam_list_roles/: Cargo.toml
iam/iam_list_roles_1/: Cargo.toml
iam/iam_list_roles_2/: Cargo.toml
iam/iam_list_users_1/: Cargo.toml
kms/kms_list_keys/: Cargo.toml
kms/kms_list_keys_1/: Cargo.toml
rds/rds_describe_db_instances/: Cargo.toml
rds/rds_describe_db_parameters/: Cargo.toml
rds/rds_describe_db_snapshots/: Cargo.toml
rds/rds_describe_db_subnet_groups/: Cargo.toml
route53/: README.md
route53/route53_change_resource_record_sets_1/: Cargo.toml
route53/route53_change_resource_record_sets_2/: Cargo.toml
route53/route53_list_hosted_zones_1/: Cargo.toml
s3/: README.md
s3/s3_create_bucket_1/: Cargo.toml
s3/s3_create_bucket_1/src/: main.rs
s3/s3_create_bucket_2/: Cargo.toml
s3/s3_delete_bucket/: Cargo.toml
s3/s3_delete_bucket_1/: Cargo.toml
s3/s3_list_buckets_1/: Cargo.toml
s3/s3_list_buckets_2/: Cargo.toml
s3_list/: Cargo.toml
s3_list/src/: main.rs
ses/ses_send_email/: Cargo.toml
ses/ses_send_email_1/: Cargo.toml
ses/ses_send_email_2/: Cargo.toml
sns/: README.md
sns/sns_create_topic/: Cargo.toml
sns/sns_get_topic_attributes/: Cargo.toml
sns/sns_get_topic_attributes_1/: Cargo.toml
sns/sns_list_topics_1/: Cargo.toml
sqs/: README.md
sqs/sqs_create_queue_1/: Cargo.toml
sqs/sqs_delete_message/: Cargo.toml
sqs/sqs_delete_message_1/: Cargo.toml
sqs/sqs_get_queue_url/: Cargo.toml
sqs/sqs_get_queue_url/src/: main.rs
sqs/sqs_get_queue_url_1/: Cargo.toml
sqs/sqs_receive_message/: Cargo.toml
sqs/sqs_receive_message_1/: Cargo.toml
sqs/sqs_send_message_1/: Cargo.toml
sqs/sqs_send_message_2/: Cargo.toml
ssm/ssm_get_parameter/: Cargo.toml
ssm/ssm_put_parameter/: Cargo.toml
(+116 files in other folders)
