[package]
name = "rds_describe_db_subnet_groups"
version = "0.1.0"
authors = ["Rilindo Foster <rilindo@monzell-labs.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {"version"= "0.2", features=["rt-threaded", "macros"]}
rusoto_core = "0.45.0"
rusoto_rds = "0.45.0"
