[package]
name = "ec2_describe_snapshots"
version = "0.1.0"
authors = ["Rilindo Foster <rilindo@monzell-labs.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {"version"= "0.2", features=["rt-threaded", "macros"]}
rusoto_core = "0.45.0"
rusoto_ec2 = "0.45.0"
