[package]
name = "s3_put_bucket_tagging"
version = "0.1.0"
authors = ["Rilindo Foster <Rilindo Foster <rilindo.foster@monzell.com>>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {"version"= "0.2", features=["rt-threaded", "macros"]}
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
clap = "2.33.3"
